--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scaler=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Search</title>
     </head>
+    <header style="text-align: right;">
+        <a href="advanced.html">Advanced</a>
+        <a href="image.html">Image search</a>
+    </header>
     <body>
-        <form action="https://www.google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div>
+            <h1>Search</h1>
+        </div>
+        <div class="flex-container">
+            <div>
+                <form action="https://www.google.com/search">
+                    <div>
+                        <input class="goglefy" type="text" name="q">
+                    </div>
+                    <div style="text-align: center; padding-top: 20px;">
+                        <input class="gray_bttn" type="submit" value="Google Search" name="google-search">
+                        <input class="gray_bttn" type="submit" value="I feel lucky" name="feeling-lucky">
+                    </div>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
