--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <title>Search</title>
     </head>
-    <header style="text-align: right;">
+    <header class="header_nav" style="text-align: right;">
         <a href="advanced.html">Advanced</a>
         <a href="image.html">Image search</a>
     </header>
@@ -17,7 +17,7 @@
             <div>
                 <form action="https://www.google.com/search">
                     <div>
-                        <input class="goglefy" type="text" name="q">
+                        <input class="searchbar" type="text" name="q">
                     </div>
                     <div style="text-align: center; padding-top: 20px;">
                         <input class="gray_bttn" type="submit" value="Google Search" name="google-search">
