--- a/image.html
+++ b/image.html
@@ -22,7 +22,7 @@
                     <div style="text-align: center; padding-top: 20px;">
                         <input class="gray_bttn" type="submit" value="Google Search" name="google-search">
                     </div>
-                    <input type="hidden" name="sclient" value="img"
+                    <input type="hidden" name="sclient" value="img">
                 </form>
             </div>
         </div>
