--- a/image.html
+++ b/image.html
@@ -20,9 +20,9 @@
                         <input class="searchbar" type="text" name="q">
                     </div>
                     <div style="text-align: center; padding-top: 20px;">
-                        <input class="gray_bttn" type="submit" value="Google Search" name="google-search">
+                        <input class="gray_bttn" type="submit" value="Google image Search" name="google-image-search">
                     </div>
-                    <input type="hidden" name="sclient" value="img">
+                    <input type="hidden" name="tbm" value="isch">
                 </form>
             </div>
         </div>
