--- a/image.html
+++ b/image.html
@@ -16,7 +16,7 @@
         <div class="flex-container">
             <div>
                 <form action="https://www.google.com/search">
-                    <div>
+                    <div class="search_decorations">🔍
                         <input class="searchbar" type="text" name="q">
                     </div>
                     <div style="text-align: center; padding-top: 20px;">
