--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <title>Search</title>
     </head>
-    <header class="header_nav" style="text-align: right;">
+    <header class="header_nav">
         <a href="advanced.html">Advanced</a>
         <a href="image.html">Image search</a>
     </header>
@@ -16,12 +16,12 @@
         <div class="flex-container">
             <div>
                 <form action="https://www.google.com/search">
-                    <div>
+                    <div class="search_decorations">🔍
                         <input class="searchbar" type="text" name="q">
                     </div>
                     <div style="text-align: center; padding-top: 20px;">
                         <input class="gray_bttn" type="submit" value="Google Search" name="google-search">
-                        <input class="gray_bttn" type="submit" value="I feel lucky" name="feeling-lucky">
+                        <input class="gray_bttn" type="submit" value="I'm Feeling Lucky" name="btnI">
                     </div>
                 </form>
             </div>
